--- a/index.css
+++ b/index.css
@@ -1,156 +1,224 @@
-@import url(https://fonts.google.com/specimen/Plus+Jakarta+Sans);
+@import url('https://fonts.google.com/specimen/Space+Grotesk');
 *{
-    font-size: 16px;
-    color: hsl(219, 12%, 42%);
+    font-size: 18px;
     font-weight: 500;
-    font-family: 'Plus Jakarta Sans';
+    font-family: 'Space Grotesk';
 }
 body{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+}
+
+.card-front, .card-back{
+    background-image: url('bg-card-front.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 1rem;
+    padding: 1rem;
+    z-index: 2;
+     position: absolute; 
+    width: max(14em,30vw);
+    height:10rem;
+    left: 0%;
+    top: 15%;
+}
+.card-front>img{
+    width: 15%;
+    height: 10%;
+}
+.card-front>p{
+    top: 2.5rem;
+    margin: 0;
+    width: 80%;
+    color: hsl(0, 0%, 100%);
+    position: relative;
+    display: inline-flex;
+    justify-content: space-around;
+
+}
+.card-front>h2{
+    bottom: 23rem;
+    color:hsl(0, 0%, 100%);
+    position: relative;
+    top: 0.4rem;
+}
+.card-back{
+    background-image: url('bg-card-back.png');
+    top: 50%;
+  /*  margin-top: 5%;
+   */ left: 10%;
+}
+.card-back>p{
+    color: hsl(0, 0%, 100%);
+    margin-top: 20%;
+    position: relative;
+    top: -3%;
+    padding-left: 65%;
+}
+#cvlabel{
+    position: relative;
+    margin-right: 20%;
+}
+input{
+    border: 5px solid hsl(270, 3%, 87%);
+    padding: 2%;
+}
+.ipdate>input{
+    margin-left: 6px;
+}
+input:active{
+    border: 5px solid;
+    border-image:linear-gradient(hsl(249, 99%, 64%),hsl(278, 94%, 30%));
+}
+#form{
+    left: max(12%,160px);
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    position: relative;
+}
+#form form{
+    margin: 5%;
+    padding: 2%;
+    display: flex;
+    width: max(40vw,300px);
+    position: relative;
+    border: 2px solid black;
+    flex-direction: column;
+}
+#form #success{
+    display: none;
+    position: relative;
+    flex-direction: column;
+    height: 100px;
+    width: 100%;
+    justify-content: center;
     align-items: center;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    padding: 5%;
-    margin: 5%;
-    background-color: white;
-    /* border: 1px solid black; */
-    border-radius: 5%;
-    box-shadow: 0 0 14px #bfbaba, 0 0 0px #989a98, 0 0 0 0px #d8d5d5;
+#success>h1{
+    color: hsl(278, 68%, 11%);
 }
-.unread{
-    background-color: aliceblue;
-
+#success>p{
+    color: hsl(279, 6%, 55%);
 }
-.box{
-    padding: 3%;
-    margin: 1%;
-    display: flex;
-    flex-direction: row;
-    cursor: pointer;
+/*
+input{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+*/
+label{
+    margin-top: 25px;
+    margin-bottom: 5px;
+    color: hsl(278, 68%, 11%);
+}
 
-  /*  justify-content: space-between;
-*/}
-.head{
-    margin: 3%;
-    padding: 3%;
+.cdelab{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.boxbox{
-    display: flex;
-    flex-direction: column;
-    padding: 5%;
-    margin: 5%;
-    border: 1px solid gainsboro;
-    cursor: pointer;
-}
-img{
-    width: 60px;
-    height: 60px;
-}
-p{
-    padding-left: 5%;
-}
-#rightimage{
-    margin-left: 2%;
-}
-span.span{
-    display: block;
-    color:hsl(219, 14%, 63%);
-}
-h2{
-    display: flex;
-}
-span.nh{
-    background-color: hsl(219, 85%, 26%);
-    padding-left: 5%;
-    padding-right: 5%;
-    color: white;
-    margin-left: 2%;
-    height: 20px;
-    font-size: 85%;
 
+.cdeip{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    margin-top: 5px;
 }
-.dot{
-    color: red;    
-    display: contents;
-    line-height: 1px;
-    font-size: 50px;
-    padding-top: 0;
+.ipdate{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    
 }
-.boxbox:hover{
-    background-color: rgb(148, 148, 241);
+.des-design{
+    background-image: url('bg-main-desktop.png');
+    width: 40rem;
+    height: 100vh;
+    min-width: 180px;
 }
-#btn{
-    cursor: pointer;
-    color:hsl(224, 21%, 14%);
-}
-.option{
-    display: none;
-    background-color:wheat;
-    border: 2px solid black;
-    position: absolute;
+.date, .cv{
+    display: flex;
     width: 40%;
-    z-index: 2;
-    padding-left: 5%;
-    top: 40%;
-    left: 40%;
+    flex-direction: column;
+    
 }
-h3{
-    color: black;
-}
-#close{
-    display: flex;
-    width: 30px;
-    height: 30px;
-    margin-left: 85%;
-    padding-top: 5%;
-}
-#edit{
+.err{
     display: none;
+    color: red;
 }
-#send{
-    width: 20px;
-    height: 20px;
-    background-color: aliceblue;
+button {
+    width: 100%;
+    color:  hsl(0, 0%, 100%);
+    background-color: hsl(278, 68%, 11%);
+    padding: 10px;
+    border-radius: 15px;
+    font-weight: 400;
+    font-size: 32px;
+ /*   color:  hsl(270, 3%, 87%);
+    color: hsl(279, 6%, 55%);
+    */
 }
-.reply{
-    margin-right: 3%;
-    width: 85%;
-    height: 30px;
-}
-#mybox{
-    display: none;
-}
-.myrep{
-    display: flex;
-    padding: 3%;
-    margin: 1%;
-   /* display: flex;
-    */flex-direction: row;
-    cursor: pointer;
-    justify-content: space-between;
-}
-b,h2{
-    color: hsl(224, 21%, 14%);
-    font-weight: 800;
-}
-@media (width<=290px) {
-    .container{
-        margin: 0;
-        padding:1%;
+@media (width>=400px) {
+   .des-design{
+        background-image: url('bg-main-desktop.png');
+        width: 40rem;
+        height: 100vh;
+        min-width: 180px;
     }
+    
 }
-@media (width>=600px){
-    .container{
-        width: 500px;
-        margin-top: 1%;
-        padding-top: 2%;
+@media (width<400px) {
+   .des-design{
+        background-image: url('bg-main-mobile.png');
+        width:100vw;
+        height:35vh;
+        min-width: 300px;
     }
     body{
-        display: grid;
-        justify-content: center;
+        flex-direction: column;
+    }
+    .card-back{
+        top: 0;
+    }
+    .card-front{
+        top: 14%;
+        z-index: 3;
+    }
+    #form{
+    left: 0;
+    width: 100vw;
+    position: relative;
+    justify-content: left;
+    height: 500px;
+    flex-direction: column;
+    align-items: flex-start;
+    }
+   #form form{
+    margin: 10px;
+    padding: 5px;
+    top: 20%;
+    width: 92vw;
+    }
+   #form #success{
+    margin-left: 10%;
+    padding-left: 5%;
+    top: 35%;
+    width: 250px;
+    }
+}
+@media (width>970px){
+    .card-front>p {
+        top: 3.7rem;
     }
 }
